WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78427
Overlay scrollbars don't appear when scrolling on the scrolling thread
https://bugs.webkit.org/show_bug.cgi?id=78427
Summary
Overlay scrollbars don't appear when scrolling on the scrolling thread
Anders Carlsson
Reported
2012-02-11 15:32:50 PST
Overlay scrollbars don't appear when scrolling on the scrolling thread
Attachments
Patch
(4.85 KB, patch)
2012-02-11 15:34 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-02-11 15:34:05 PST
Created
attachment 126653
[details]
Patch
Anders Carlsson
Comment 2
2012-02-11 15:37:02 PST
Committed
r107490
: <
http://trac.webkit.org/changeset/107490
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug