Overlay scrollbars don't appear when scrolling on the scrolling thread https://bugs.webkit.org/show_bug.cgi?id=78427

Reviewed by Sam Weinig.

Add a ScrollAnimator::notifyContentAreaScrolled and call it from ScrollAnimator::notifyContentAreaScrolled.
It is then overridden in ScrollAnimatorMac to tickle AppKit so that overlay scrollbars will be shown.

* platform/ScrollAnimator.h:
(WebCore::ScrollAnimator::notifyContentAreaScrolled):
(ScrollAnimator):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::notifyScrollPositionChanged):
* platform/mac/ScrollAnimatorMac.h:
(ScrollAnimatorMac):
* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::notifyPositionChanged):
(WebCore::ScrollAnimatorMac::notifyContentAreaScrolled):
(WebCore):

Canonical link: https://commits.webkit.org/95352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107490 268f45cc-cd09-0410-ab3c-d52691b4dbfc